--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  height: -webkit-fill-available;
+  height: stretch;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,10 +25,136 @@
 .App-intro {
   font-size: large;
 }
-div.console-typing{
-  color:lightgreen;
-  background: #333333;
+div#console-window{
+  position: absolute;
+    z-index: 1;
+  width:30%;
+  border:1px solid black;
+  box-shadow: 5px 10px #282828;
+  border-radius: 5px;
 }
-div.console-typing >a {
+div#console-header>*{
+  color: white;
+  display:contents;
+}
+div#console-header{
+  display:flex;
+  justify-content: space-between;
+  color: white;
+  background: rgb(38, 38, 38);
+  border-bottom: 1px solid rgb(19, 19, 19);
+  padding: 5px;
+  padding-right: 10px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+div#console-display{
+  color: lightgreen;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  padding: 5px;
+  min-height: 100px;
+  border-bottom: 1px solid black;
+}
+div#console-display div{
   color: inherit;
+}
+div#console-input{
+  padding: 10px;
+  height: 45px;
+  
+}
+div.console-typing{
+  padding: 5px;
+  color:white;
+  background: #333333;
+  text-align: left;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+div.console-typing >div {
+  color: inherit;
+}
+div#userInput{
+  display:flex;
+}
+.blinking-cursor {
+  font-weight: inherit;
+  font-size: x-large;
+  color: white;
+  -webkit-animation: 1s blink step-end infinite;
+  -moz-animation: 1s blink step-end infinite;
+  -ms-animation: 1s blink step-end infinite;
+  -o-animation: 1s blink step-end infinite;
+  animation: 1s blink step-end infinite;
+}
+
+@keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: lightgreen;
+  }
+}
+
+@-moz-keyframes blink {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: lightGreen;
+  }
+}
+
+@-webkit-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: lightgreen;
+  }
+}
+
+@-ms-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: lightgreen;
+  }
+}
+
+@-o-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: lightgreen;
+  }
+}
+.hideMe {
+  -moz-animation: cssAnimation 0s ease-in 10s forwards;
+  /* Firefox */
+  -webkit-animation: cssAnimation 0s ease-in 10s forwards;
+  /* Safari and Chrome */
+  -o-animation: cssAnimation 0s ease-in 10s forwards;
+  /* Opera */
+  animation: cssAnimation 0s ease-in 10s forwards;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+@keyframes cssAnimation {
+  to {
+      width:0;
+      height:0;
+      overflow:hidden;
+  }
+}
+@-webkit-keyframes cssAnimation {
+  to {
+      width:0;
+      height:0;
+      visibility:hidden;
+  }
 }
