--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ div#console-display{
   border-bottom-right-radius: 5px;
   padding: 5px;
   min-height: 100px;
+  
   border-bottom: 1px solid black;
 }
 div#console-input{
@@ -201,4 +202,19 @@ div#info-Container{
 
 @keyframes slideTop {
   100% { top: 0; }
+}
+
+@media only screen and (max-width: 600px) {
+  div#console-window{
+    width:100%;
+  }
+  img#bg-gif{
+    position: absolute;
+    top:-100%;
+    right:-105%;
+    width: auto;
+    height: 100%;
+    opacity: .5;
+    z-index: 0;
+  }
 }
