--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ body{
 }
 div#console-window{
   position: absolute;
-  z-index: 1;
+  z-index: 3;
   width:30%;
   border:1px solid rgba(255, 255, 255, 0.42);
   border-radius: 5px;
@@ -101,7 +101,7 @@ div#nav-Bar{
   justify-content: center;
   align-content: center;
   position: absolute;
-  top: -50%;
+  top: -100%;
   width: 100%;
   z-index: 1;
 }
@@ -117,7 +117,7 @@ img#bg-gif{
   opacity: .5;
   z-index: 0;
 }
-div#nav-Bar *{
+div#nav-Bar div{
   background-color:transparent;
   color:inherit;
 }
@@ -200,8 +200,9 @@ div#info-Container{
 .slideTop {
   -webkit-animation: slideTop 1s forwards;
   /* -webkit-animation-delay: 2s; */
-  animation: slideTop 1s forwards;
-  /* animation-delay: 2s; */
+  animation-name: slideTop;
+  animation-fill-mode: forwards;
+  animation-duration: 2s;
 }
 
 @-webkit-keyframes slideTop {
@@ -217,12 +218,30 @@ div#info-Container{
     width:100%;
   }
   img#bg-gif{
-    position: absolute;
-    top:-100%;
     right:-95%;
     width: auto;
     height: 100%;
-    opacity: .5;
-    z-index: 0;
+  }
+  div#nav-Bar{
+    padding-top:20px;
+    background:linear-gradient(to right, black,transparent);
+    color:white;
+    top: -20px;
+    left: -100%;
+    width: auto;
+    z-index: 1;
+    flex-direction: column;
+  }
+  .nav-item.slide0{
+    padding-left:25px;
+    border-bottom-right-radius: 15px;
+    border-right: 1px solid white;
+    border-bottom: 1px solid white;
+    z-index: 3;
+    width: 100%;
+    display: flex;
+    height: 45px;
+    align-items: center;
+    background-color: black;
   }
 }
