--- a/src/App.css
+++ b/src/App.css
@@ -219,11 +219,14 @@ div#info-Container{
 
 #navIcon{
   opacity: 0;
+  padding: 0;
 }
 
 @media only screen and (max-width: 600px) {
   #navIcon{
    opacity: 1;
+   padding-right: 37.5px;
+  padding-left: 37.5px;
   }
   div#console-window{
     min-width: 95%;
@@ -257,4 +260,7 @@ div#info-Container{
     align-items: center;
     background-color: black;
   }
+  .main-typing {
+    width: 90%;
+}
 }
