added new sections

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,28 @@
+
 body{
+  color:white;
   background-color:black;
   width: 100%;
+  height:100%;
+  margin:0;
+  padding:0;
 }
-*{
-  color:white;
+#root{
+  width: 100%;
+  height:100%;
 }
 .App {
-  height: stretch;
-  display: flex;
-  align-items: center;
-  justify-content: center;  
+  width: 100%;
+  height:100%;
+  display: flex; 
   background-color:black;
   font-family: 'Montserrat';
+  align-content: center;
 }
 
 div#console-window{
+  top: 35%;
+  left:35%;
   position: absolute;
   z-index: 3;
   min-width:380px;
@@ -29,7 +37,7 @@ div#console-window{
 }
 @keyframes fadeout {
   0%   {opacity:1;}
-  100% {opacity:0;}
+  100% {opacity:0;overflow: hidden;}
 }
 
 div#console-header>*{
@@ -104,7 +112,7 @@ div#nav-Bar{
   height: max-content
 }
 img#bg-gif{
-  position: absolute;
+  position: fixed;
   top:-100%;
   height: 100%;
   opacity: .5;
@@ -221,7 +229,32 @@ div#info-Container{
   opacity: 0;
   padding: 0;
 }
-
+div#MainView{
+  width: 100%;
+  height:500%;
+  z-index: 2;
+}
+div#typing-Intro{
+  padding-top: 50%;
+  min-width: 50%;
+  padding-left: 30%;
+}
+div#MainView >div:nth-child(n){
+  display: flex;
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 100%;
+  height: 20%;
+  justify-content: center;
+  align-content: center;
+}
+div#typingContainer{
+  padding-top: 40%;
+}
 @media only screen and (max-width: 600px) {
   #navIcon{
    opacity: 1;
@@ -229,12 +262,11 @@ div#info-Container{
   padding-left: 37.5px;
   }
   div#console-window{
+    left:2.5%;
     min-width: 95%;
   }
   img#bg-gif{
     right:-95%;
-    width: auto;
-    height: 100%;
   }
   div#nav-Bar{
     padding-top:20px;
