animation titles and button

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ div#console-window{
 div#console-header>*{
   color: white;
   display: flex;
-  align-self: center;
+  text-align: center;
 }
 div#console-header h3{
   margin:0px;
@@ -117,6 +117,7 @@ img#bg-gif{
   height: 100%;
   opacity: .5;
   z-index: 0;
+  left: calc(100% - 1497px);
 }
 div#nav-Bar div{
   background-color:transparent;
@@ -224,6 +225,11 @@ div#info-Container{
   font-size: xx-large;
   line-height: normal;
 }
+div.animated>a{
+  color:white;
+  font-size: xx-large;
+  line-height: normal;
+}
 
 #navIcon{
   opacity: 0;
@@ -235,7 +241,6 @@ div#MainView{
   z-index: 2;
 }
 div#typing-Intro{
-  padding-top: 50%;
   min-width: 50%;
   padding-left: 30%;
 }
@@ -249,24 +254,27 @@ div#MainView >div:nth-child(n){
   transform: translateX(-50%);
   width: 100%;
   height: 20%;
-  justify-content: center;
   align-content: center;
+  flex-direction: column;
 }
 div#typingContainer{
-  padding-top: 40%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 20%;
 }
 @media only screen and (max-width: 600px) {
   #navIcon{
-   opacity: 1;
-   padding-right: 37.5px;
-  padding-left: 37.5px;
+    opacity: 1;
+    padding-right: 37.5px;
+    padding-left: 37.5px;
   }
   div#console-window{
     left:2.5%;
     min-width: 95%;
   }
   img#bg-gif{
-    right:-95%;
+    left: calc((0% - 1497px)/2);
   }
   div#nav-Bar{
     padding-top:20px;
