--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,40 @@ body{
   background-color:black;
   font-family: 'Montserrat';
 }
-
+ 
+div#AboutMe{
+  display: flex;
+  flex-direction: column;
+  width:100%;
+}
+p{
+  font-size: large;
+  padding:10px;
+}
+.textBoxLeft{
+  background-color: rgba(0, 0, 0, 0.60);
+border-bottom-right-radius: 15px;
+border-top-right-radius: 15px;
+width:80%;
+align-self: flex-start;
+flex-direction: row-reverse;
+margin-top:15px;
+display:flex;
+}
+.textBoxRight{
+  background-color: rgba(0, 0, 0, 0.60);
+  border-bottom-left-radius: 15px;
+border-top-left-radius: 15px;
+width:80%;
+align-self: flex-end;
+display:flex;
+flex-direction: row;
+margin-top:15px;
+}
+div.subView img{
+  width:50%;
+  height: 50%;
+}
 div#console-window{
   justify-self: center;
   align-self: center;
@@ -93,7 +126,6 @@ div#input-Field{
 }
 div#nav-Bar{
   padding-top:20px;
-  background:linear-gradient(to bottom, black,black,transparent);
   color:white;
   display:flex;
   justify-content: center;
@@ -251,9 +283,9 @@ div#MainView >div:nth-child(n){
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   width: 100%;
-  height: 20%;
   align-content: center;
   flex-direction: column;
+  min-height: 20%;
 }
 div#typingContainer{
   display: flex;
@@ -275,6 +307,17 @@ div#bg-gifOverlay {
   }
 }
 @media only screen and (max-width: 600px) {
+  .textBoxLeft{
+    flex-direction: column;
+    align-items: center;
+  }
+  .textBoxRight{
+    flex-direction: column;
+    align-items: center;
+  }
+  div.subView img{
+    width:100%;
+  }
   img#bg-gif{
     width:auto;
     height:100%;
