Working menu for both mobile and desktop view

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@ body{
   margin:0;
   padding:0;
 }
+.textColumn{
+  flex-direction: column;
+}
 #root{
   width: 100%;
   height:100%;
@@ -122,7 +125,7 @@ div#input-Field{
   padding-top: 5px;
   padding-left: 5px;
   
-  color:inherit;
+  color:white;
 }
 div#nav-Bar{
   padding-top:20px;
@@ -134,7 +137,7 @@ div#nav-Bar{
   /* top: -100%; */
   width: 100%;
   /* height: 150%; */
-  z-index: 1;
+  z-index: 3;
   top:-165px;
   height: 278px;
 }
@@ -151,7 +154,7 @@ img#bg-gif{
 }
 div#nav-Bar div{
   background-color:transparent;
-  color:inherit;
+  color:white;
 }
 
 div#info-Container{
@@ -266,7 +269,16 @@ div.animated a{
   align-self:center;
   font-style:oblique;
 }
-
+.textPara{
+  margin-top:20%;
+  align-self: center;
+  background-color: rgba(0, 0, 0, 0.60);
+  margin: 20px;
+}
+.textPara p{
+  font-size: x-large;
+  text-align: center;
+}
 #navIcon{
   opacity: 0;
   padding: 0;
@@ -343,9 +355,9 @@ div#bg-gifOverlay {
     top:-3%;
     left: -65%;
     width: auto;
-    z-index: 1;
+    z-index: 3;
     flex-direction: column;
-    z-index: 1;
+    z-index: 3;
     flex-direction: column;
     justify-content: flex-start;
   }
