--- a/src/App.css
+++ b/src/App.css
@@ -345,7 +345,7 @@ div#typingContainer{
 }
 div#bg-gifOverlay {
   width:100%;
-  height:100%;
+  height:auto;
   position: fixed;
   justify-content: center;
   display: flex;
