--- a/src/App.css
+++ b/src/App.css
@@ -188,20 +188,32 @@ div#nav-Bar{
   padding-top:20px;
   color:white;
   display:flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-content: center;
   position: absolute;
-  /* top: -100%; */
   width: 100%;
-  /* height: 150%; */
+  left:-4%;
   z-index: 3;
   top:-165px;
   height: 278px;
 }
 .nav-item{
-  padding-right: 37.5px;
-  padding-left: 37.5px;
-  height: max-content
+  height: max-content;
+width: 15%;
+transition: 0.3s;
+}
+.nav-item *{
+  transition:0.3s;
+}
+.nav-item *:hover{
+  transform:scale(1.5);
+  background-color: rgba(0, 0, 0, 0.30);
+}
+.nav-item *{
+  text-align: center
+}
+.nav-item a{
+  display: block;
 }
 img#bg-gif{
   width:auto;
