--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+div.backgroundSection{
+  display: flex;
+  flex-direction: row;
+  width:100%;
+}
+div.backgroundSection h2{
+  text-align: center;
+}
+div.backgroundSection p{
+width: fit-content;
+}
+div.backgroundInfo{
+  width: 100%;
+  padding:10px;
+  border-bottom: 3px solid white;
+}
 div.projectSection{
   padding:10px;
   display:flex;
@@ -58,7 +74,8 @@ p{
   padding:10px;
 }
 .textBoxLeft{
-  background-color: rgba(0, 0, 0, 0.60);
+  transition:0.3s;
+  /* background-color: rgba(0, 0, 0, 0.60); */
 border-bottom-right-radius: 15px;
 border-top-right-radius: 15px;
 width:80%;
@@ -85,11 +102,12 @@ display:flex;
   z-index: 3;
   display: block;
 }
-div.projectLine :nth-child(2){
+div.projectLine >:nth-child(2){
   padding-left:5%;
 }
 .textBoxRight{
-  background-color: rgba(0, 0, 0, 0.60);
+  transition:0.3s;
+  /* background-color: rgba(0, 0, 0, 0.60); */
   border-bottom-left-radius: 15px;
 border-top-left-radius: 15px;
 width:80%;
@@ -98,6 +116,9 @@ display:flex;
 flex-direction: row;
 margin-top:30px;
 }
+/* .textBoxRight:hover{
+  background-color: rgba(0, 0, 0, 0.3) */
+/* } */
 .imgColumn{
   width: 100%;
     height: auto;
@@ -206,8 +227,14 @@ transition: 0.3s;
   transition:0.3s;
 }
 .nav-item *:hover{
-  transform:scale(1.5);
-  background-color: rgba(0, 0, 0, 0.30);
+  transform:scale(1.25);
+  /* background-color: rgba(0, 0, 0, 0.30); */
+}
+div#MainView p{
+  transition: 0.3s;
+}
+div#MainView p:hover{
+  background-color: rgba(0, 0, 0, 0.45);
 }
 .nav-item *{
   text-align: center
@@ -476,5 +503,8 @@ div#bg-gifOverlay {
   }
   .main-typing {
     width: 90%;
+}
+div.backgroundSection{
+display:block;
 }
 }
