--- a/src/App.css
+++ b/src/App.css
@@ -434,6 +434,42 @@ div#bg-gifOverlay {
   content: "";
   z-index: 0;
 }
+div#SocialCards{
+  display:flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+  align-content: center;
+}
+.card{
+  background: black;
+  display:flex;
+  align-self: center;
+  flex-direction: column;
+}
+.card *{
+  /* position: absolute; */
+}
+.card img{
+  z-index: 1;
+  transition: 0.3s
+}
+.card img:hover{
+  opacity: 0.5
+}
+.card img:hover + h1{
+transform:scale(1.25);
+  opacity:1;
+}
+.card h1{
+  opacity: 0.5;
+  z-index: 2;
+  transition: 0.3s;
+  display:block;
+  justify-self: center;
+  align-self: center;
+  font-size: xx-large;
+}
+
 @media (orientation:landscape){
   img#bg-gif{
     width:100%;
