--- a/src/App.css
+++ b/src/App.css
@@ -409,9 +409,9 @@ div#MainView >div:nth-child(n){
   display: flex;
   position: relative;
   left: 50%;
-  /* -webkit-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%); */
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   width: 100%;
   align-content: center;
