--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,8 @@ align-self: flex-start;
 flex-direction: row-reverse;
 margin-top:30px;
 display:flex;
+opacity: 1;
+z-index: 5;
 }
 .imgContainer{
   height:100%;
@@ -121,6 +123,8 @@ align-self: flex-end;
 display:flex;
 flex-direction: row;
 margin-top:30px;
+opacity: 1;
+z-index: 5;
 }
 /* .textBoxRight:hover{
   background-color: rgba(0, 0, 0, 0.3) */
