--- a/src/App.css
+++ b/src/App.css
@@ -80,8 +80,7 @@ p{
   padding:10px;
 }
 .textBoxLeft{
-  transition:0.3s;
-  /* background-color: rgba(0, 0, 0, 0.60); */
+  /* transition:0.3s; */
 border-bottom-right-radius: 15px;
 border-top-right-radius: 15px;
 width:80%;
@@ -114,8 +113,7 @@ div.projectLine >:nth-child(2){
   padding-left:5%;
 }
 .textBoxRight{
-  transition:0.3s;
-  /* background-color: rgba(0, 0, 0, 0.60); */
+  /* transition:0.3s; */
   border-bottom-left-radius: 15px;
 border-top-left-radius: 15px;
 width:80%;
@@ -126,9 +124,6 @@ margin-top:30px;
 opacity: 1;
 z-index: 5;
 }
-/* .textBoxRight:hover{
-  background-color: rgba(0, 0, 0, 0.3) */
-/* } */
 .imgColumn{
   width: 100%;
     height: auto;
