--- a/src/App.css
+++ b/src/App.css
@@ -238,7 +238,6 @@ width: 15%;
 }
 div#MainView p , a{
   /* transition: 0.3s; */
-  background-color: rgba(0, 0, 0, 0.45);
   border-radius: 15px;
 }
 /* div#MainView p:hover{
@@ -373,12 +372,13 @@ div.sectionTitle>a{
   font-size: -webkit-xxx-large;
   line-height: normal;
   font-style:oblique;
-  border-top: 1px solid;
   border-bottom: 3px solid;
   width: auto;
   text-align: center;
   align-self: center;
   margin: 10%;
+  padding-left: 20px;
+    padding-right: 20px;
 }
 .textPara{
   margin-top:20%;
